--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ root = true
 indent_style = tab
 end_of_line = lf
 charset = utf-8
-insert_final_newline = false
+insert_final_newline = true
 
 [{*.json,.*rc,*.yaml,*.yml,*.conf}]
 indent_style = tab
