--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-vue": "^8.0.3",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-standard": "^25.0.0",
